# gauss

./: .gitignore  Cargo.toml  Makefile  config.debug.toml  config.hcl  config.toml  docker-compose.yml
.cargo/: config.toml
.devcontainer/: .gitignore  Dockerfile  devcontainer.json
.devcontainer/back/: devcontainer.json  launch.json  settings.json
.devcontainer/fastapi/: devcontainer.json
.devcontainer/front/: devcontainer.json  launch.json  settings.json
.devcontainer/react/: devcontainer.json
.devcontainer/websocket/: devcontainer.json
back/: Makefile  pyproject.toml
back/adapters/redis-storage/src/gauss/adapters/: redis_storage.py
back/gauss/: Makefile  pyproject.toml
back/gauss-core/src/gauss/core/domain/: kv_model.py  kv_storage.py
back/gauss-core/src/gauss/core/helper/: asyncio.py  config.py  os.py  socket.py
back/gauss-core/src/gauss/core/ports/: kv_storage.py  worker_context.py  worker_registry.py
back/gauss-core/tests/: test_persistent_model.py
back/gauss-server/src/gauss/server/: fast_api.py  main.py  worker.py
back/gauss-server/src/gauss/server/middleware/: detailed_logging.py
back/gauss/adapters/redis-storage/: pyproject.toml
back/gauss/gauss-core/: pyproject.toml
back/gauss/gauss-core/src/gauss/core/domain/: kv_model.py  kv_storage.py  plugin.py
back/gauss/gauss-core/src/gauss/core/helper/: config.py  logging.py  os.py  socket.py
back/gauss/gauss-core/src/gauss/core/ports/: worker_context.py  worker_registry.py
back/gauss/gauss-core/tests/: test_persistent_model.py
back/gauss/gauss-server/: pyproject.toml
back/python/adapters/redis-storage/src/gauss/adapters/: redis_storage.py
back/python/gauss-core/src/gauss/core/ports/: kv_storage.py
back/python/gauss-server/src/gauss/server/: fast_api.py
back/server/: main.py
back/server/balancer/: main.py
back/server/context/: memory_context.py  redis_storage.py
back/server/core/: pydentic_flat.py  shared_memory.py  worker_context.py  worker_registry.py
back/server/core/domain/: kv_model.py  plugin.py
back/server/core/helper/: asyncio.py  socket.py
back/server/core/ports/: kv_storage.py
back/server/helper/: asyncio.py  config.py  logging.py  os.py  socket.py
back/server/http_worker/: fast_api.py  main.py  worker.py
back/server/http_worker/middleware/: detailed_logging.py
back/server/process/: local_spawner.py
back/server/registry/: file_registry.py
back/server/tests/: test_persistent_model.py
back/server/websocket_worker/: main.py  worker.py
back/server/websocket_worker/client/: client.py  manager.py
back/tmp/: shared_memory.py
back/tmp/balancer/: l4.py  main.py
back/tmp/context/: memory_context.py
back/tmp/process/: base_spawner.py  local_spawner.py
back/tmp/registry/: file_registry.py
back/tmp/websocket_worker/: main.py  worker.py
back/tmp/websocket_worker/client/: client.py  manager.py
bins/gauss-server/: .gitignore  Cargo.toml
bins/gauss-server/src/: main.rs
bins/grafana-datasource/: Cargo.toml
bins/grafana-datasource/frontend/: ConfigEditor.tsx  QueryEditor.tsx  datasource.ts  module.ts  package-lock.json  package.json  plugin.json  tsconfig.json  types.ts  webpack.config.js
bins/grafana-datasource/src/: main.rs  plugin.rs
bins/grafana-datasource/src/plugin/: data_service.rs  error.rs  frame.rs  mod.rs  query.rs  resource_service.rs  stream_service.rs
bins/quotes-gen/: Cargo.toml  config.toml
bins/quotes-gen/src/: main.rs
bins/quotes-gen/src/cmd/: config.rs  domain.rs  error.rs  generate.rs  mod.rs  sink_pipeline.rs
bins/server/: Cargo.toml
bins/server/src/: config.rs  error.rs  main.rs
bins/server/src/cmd/: serve.rs
docs/: architecture.md  development-guide.md
front/: package.json  pnpm-lock.yaml
front/web/: eslint.config.mjs  package.json  vite.config.js
front/web/src/: App.jsx  config.js
libs/api/: Cargo.toml
libs/api/src/: error.rs  ffi.rs  lib.rs  pipeline.rs  schema.rs  topic.rs  types.rs  util.rs
libs/gauss-api/: Cargo.toml
libs/gauss-api-derive/: .gitignore  Cargo.toml
libs/gauss-api-derive/src/: lib.rs
libs/gauss-api-server/: Cargo.toml
libs/gauss-api-server/src/: lib.rs
libs/gauss-api/src/: config.rs  converter.rs  error.rs  ffi.rs  format.rs  lib.rs  mapping.rs  processor.rs  record.rs  schema.rs  storage.rs  value.rs
libs/gauss-config-hcl/: Cargo.toml
libs/gauss-config-hcl/src/: lib.rs
libs/gauss-engine/: .gitignore  Cargo.toml
libs/gauss-engine/src/: bootstrap.rs  config.rs  error.rs  lib.rs  plugin_host.rs  schema_mapping.rs  topic.rs
libs/pipeline/: Cargo.toml
libs/pipeline/src/: config.rs  endpoint.rs  error.rs  lib.rs  sink.rs  source.rs
libs/plugin-host/: Cargo.toml
libs/plugin-host/src/: lib.rs
libs/topic-api-server/: Cargo.toml
libs/topic-api-server/src/: http.rs  lib.rs  ws.rs
libs/topic-engine/: Cargo.toml
libs/topic-engine/src/: error.rs  lib.rs
old/: .gitignore
plugins/converter/ch-to-pg/: Cargo.toml
plugins/converter/ch-to-wire/: Cargo.toml
plugins/converter/pg-to-ch/: Cargo.toml
plugins/converter/pg-to-wire/: Cargo.toml
plugins/format/arrow/: .gitignore  Cargo.toml
plugins/format/avro/: .gitignore  Cargo.toml
plugins/format/csv/: Cargo.toml
plugins/format/json/: Cargo.toml
plugins/format/protobuf/: .gitignore  Cargo.toml
plugins/framing/length-prefixed/: Cargo.toml
plugins/framing/lines/: Cargo.toml
plugins/middleware/compress/: Cargo.toml
plugins/processor/decompress/: Cargo.toml
plugins/processor/format-convert/: Cargo.toml
plugins/processor/ohlc/: Cargo.toml
plugins/processor/passthrough/: Cargo.toml
plugins/processor/symbol-filter/: .gitignore  Cargo.toml
plugins/processor/tcp-sink/: Cargo.toml
plugins/processor/tcp-source/: Cargo.toml
plugins/stage/ohlc/: Cargo.toml
plugins/stage/symbol-filter/: Cargo.toml
plugins/storage/clickhouse/: .gitignore  Cargo.toml
plugins/storage/clickhouse-rmt/: Cargo.toml
plugins/storage/clickhouse/sql/: create_ohlc.sql
plugins/storage/clickhouse/src/: lib.rs
schemas/: quote.avsc  quote.desc  quote.proto
scripts/: .gitignore
(+45 files in other folders)
