[workspace]
members = [
    # Core libraries
    "libs/gauss-api",
    "libs/gauss-api-derive",
    "libs/gauss-engine",
    "libs/gauss-api-server",

    # Binaries
    "bins/gauss-server",

    # Format plugins
    "plugins/format/json",
    "plugins/format/csv",
    "plugins/format/protobuf",
    "plugins/format/avro",
    "plugins/format/arrow",

    # Storage plugins
    "plugins/storage/memory",
    "plugins/storage/file",
    "plugins/storage/clickhouse",
    "plugins/storage/postgres",

    # Processor plugins
    "plugins/processor/tcp-source",
    "plugins/processor/tcp-sink",
    "plugins/processor/passthrough",
    "plugins/processor/format-convert",
    "plugins/processor/ohlc",
    "plugins/processor/symbol-filter",
    "plugins/processor/decompress",

    # Converter plugins
    "plugins/converter/pg-to-ch",
    "plugins/converter/ch-to-pg",
    "plugins/converter/ch-to-wire",
    "plugins/converter/pg-to-wire",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
gauss-api = { path = "libs/gauss-api" }
gauss-engine = { path = "libs/gauss-engine" }
gauss-api-server = { path = "libs/gauss-api-server" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1" }
tracing = "0.1"
thiserror = "2"

[profile.release]
strip = true
lto = "thin"
opt-level = "z"
panic = "abort"
