[project]
name = "gauss"
version = "0.1.0"
description = "gauss back fast api"
authors = [
    { name = "Sergei Solomatov", email = "solomatovs@gmail.com" }
]
readme = "server/README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.3",
    "pyyaml",
    "tomli",
    "aiorwlock",
]

[project.scripts]
gauss = "server:main"

[tool.uvicorn]
factory = false
reload = true
host = "0.0.0.0"
port = 8000

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.5",
    "pytest>=8.0",
]

[project.entry-points."gauss.storages"]
redis = "server.adapters.redis_storage:RedisStorage"
memory = "server.core.storage:MemoryStorage"