[package]
name = "gauss-server"
edition.workspace = true
version.workspace = true

[dependencies]
gauss-engine = { workspace = true }
gauss-api-server = { workspace = true }
gauss-config-hcl = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive", "env"] }
