[package]
name = "gpx-quotes"
version = "1.0.0"
edition = "2021"

[dependencies]
server-api = { path = "../../libs/api" }
grafana-plugin-sdk = { git = "https://github.com/grafana/grafana-plugin-sdk-rust", branch = "main" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures = "0.3"
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
async-stream = "0.3"
bytes = "1"
http = "1"
urlencoding = "2"
