[package]
name = "quotes-gen"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "quotes-gen"
path = "src/main.rs"

[dependencies]
server-api = { path = "../../libs/api" }
pipeline = { path = "../../libs/pipeline" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "net", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
