[package]
name = "gauss-server"
version = "0.1.0"
edition = "2024"

[dependencies]
server-api = { path = "../../libs/api" }
plugin-host = { path = "../../libs/plugin-host" }
topic-engine = { path = "../../libs/topic-engine" }
storage-memory = { path = "../../plugins/storage/memory" }
pipeline = { path = "../../libs/pipeline" }
topic-api-server = { path = "../../libs/topic-api-server" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
