[package]
name = "gauss-engine"
edition.workspace = true
version.workspace = true

[dependencies]
gauss-api = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
tracing = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
libloading = "0.8"
rhai = "1"
