[package]
name = "gauss-engine"
edition.workspace = true
version.workspace = true

[dependencies]
gauss-api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
tracing = { workspace = true }
thiserror = { workspace = true }
libloading = "0.8"
rhai = "1"
