[package]
name = "pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
server-api = { path = "../api" }
plugin-host = { path = "../plugin-host" }
tokio = { version = "1", features = ["sync", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
