[package]
name = "topic-api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
server-api = { path = "../api" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["net", "sync", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = { version = "0.7", features = ["rt"] }
