[project]
name = "gauss-core"
version = "0.1.0"
description = "Gauss core library (domain + ports)"
authors = [
    { name = "Sergei Solomatov", email = "solomatovs@gmail.com>" },
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

readme = "README.md"


[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"


### POETRY ###
[tool.poetry]
packages = [
    { include = "gauss", from = "src" }
]


[tool.poetry.group.dev.dependencies]
# пакеты, которые нужны в среде разработки (не попадают в сборку проекта для prod)
black = "^24.0" # автоформатирование кода.
ruff = "^0.5"   # линтер и проверка качества кода.
pytest = "^8.0" # фреймворк для тестов.
pytest-asyncio = "^1.2.0"
