[project]
name = "gauss-server"
version = "0.1.0"
description = "Gauss http server"
authors = [
    { name = "Sergei Solomatov", email = "solomatovs@gmail.com>" },
]
requires-python = ">=3.10"
dependencies = [
    "gauss-core",
    "fastapi>=0.115.0",
    "uvicorn",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "tomli>=2.0",
    "aiorwlock>=1.3",
]
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"


### POETRY ###
[tool.poetry]
packages = [
    { include = "gauss", from = "src" }
]

[tool.poetry.dependencies]
gauss-core = { path = "../gauss-core", develop = true }
uvicorn = { extras = ["standard"], version = "^0.30.0" }

[tool.poetry.scripts]
gauss = "gauss.server.main:main"


[tool.poetry.group.dev.dependencies]
# пакеты, которые нужны в среде разработки (не попадают в сборку проекта для prod)
black = "^24.0" # автоформатирование кода.
ruff = "^0.5"   # линтер и проверка качества кода.
pytest = "^8.0" # фреймворк для тестов.
pytest-asyncio = "^1.2.0"
